# xproperty

./: .appveyor.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  environment-dev.yml  xpropertyConfig.cmake.in
.azure-pipelines/: unix-build.yml
.github/workflows/: main.yml
docs/: Doxyfile  environment.yml
docs/source/: compilers.rst  conf.py  index.rst  installation.rst  usage.rst
include/xproperty/: any.hpp  xjson.hpp  xobserved.hpp  xproperty.hpp  xproperty_config.hpp
notebooks/: xproperty.ipynb
test/: CMakeLists.txt  main.cpp  test-environment.yml  test_utils.hpp  test_xjson.cpp  test_xobserved.cpp  test_xproperty.cpp  xpropertyConfig.cmake  xpropertyConfigVersion.cmake
test/test/: Makefile  cmake_install.cmake
